// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Apps Documentation
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
        </p>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Apps Documentation
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        This is the dashboard for your applications created using the Reapit Foundations platform. If you have not created an app before or you need help, please take the time to view our getting started guide.
      </p>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsDetail page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Preview in AppMarket
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          Clicking below will take you to your current AppMarket listing, to view your app as users will see it.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        >
          Preview
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Preview in AppMarket
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        Clicking below will take you to your current AppMarket listing, to view your app as users will see it.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
      >
        Preview
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsEdit page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Revision Outstanding
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          You have recently submitted an app listing revision for approval.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          For more on this process 
          <a>
            visit here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          If you no longer want your app revision to be approved, you can cancel below.
        </p>
        <button
          class="esplruv-el-mb3 e1iow709-el-intent-critical e1tqqdf9-el-button"
        >
          Cancel Revision
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Revision Outstanding
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        You have recently submitted an app listing revision for approval.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        For more on this process 
        <a>
          visit here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        If you no longer want your app revision to be approved, you can cancel below.
      </p>
      <button
        class="esplruv-el-mb3 e1iow709-el-intent-critical e1tqqdf9-el-button"
      >
        Cancel Revision
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsEdit page where has unsaved changes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Listed Application
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          As your app is live with customer data, you will need to submit any app changes for approval by one of our team. For more on this process 
          <a>
            visit here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          You also have the option of de-listing your app and reverting to a sandbox only integration.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        >
          De-list app
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1iow709-el-intent-critical eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
        >
          Create Revision
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Listed Application
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        As your app is live with customer data, you will need to submit any app changes for approval by one of our team. For more on this process 
        <a>
          visit here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        You also have the option of de-listing your app and reverting to a sandbox only integration.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
      >
        De-list app
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1iow709-el-intent-critical eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
      >
        Create Revision
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsEdit page where has unsaved changes and not listed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Unsaved Changes
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          Before you list your app you can save the details at any point below. After app listing, you will have to create an app revision for our team to review.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        >
          Save Changes
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Unsaved Changes
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        Before you list your app you can save the details at any point below. After app listing, you will have to create an app revision for our team to review.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
      >
        Save Changes
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsEdit page where is completed and not publically listed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Ready For Review
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          As your app listing is now complete, you can submit it for review by one of our team, so you can go live with customer data. For more on this process
           
          <a>
            visit here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          You also have the option of saving any additional changes as you make them before submitting.
        </p>
        <button
          class="esplruv-el-mb3 e1iow709-el-intent-critical eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
        >
          Submit Review
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Ready For Review
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        As your app listing is now complete, you can submit it for review by one of our team, so you can go live with customer data. For more on this process
         
        <a>
          visit here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        You also have the option of saving any additional changes as you make them before submitting.
      </p>
      <button
        class="esplruv-el-mb3 e1iow709-el-intent-critical eay05y4-el-button-has-right-chevron e1tqqdf9-el-button"
      >
        Submit Review
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsEdit page where isListed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Listed Application
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          As your app is live with customer data, you will need to submit any app changes for approval by one of our team. For more on this process 
          <a>
            visit here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          You also have the option of de-listing your app and reverting to a sandbox only integration.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        >
          De-list app
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Listed Application
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        As your app is live with customer data, you will need to submit any app changes for approval by one of our team. For more on this process 
        <a>
          visit here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        You also have the option of de-listing your app and reverting to a sandbox only integration.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
      >
        De-list app
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the appsEdit page where the app is loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          App Listings
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          Actions will appear below as you perform tasks on this page
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        App Listings
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        Actions will appear below as you perform tasks on this page
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the consents page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          App Consents
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          This page is visible because you have requested new permissions as part of your current outstanding app revision. An email will be sent to each of the customers who installed your app, requesting they agree to the new permissions you have requested.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          Each customer will have to agree to the new permission before our team can approve your revision. You can either track this process here or reach out to your customer to expedite their response to our message.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          You can also request that the email is re-sent to each customer individually.
        </p>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        App Consents
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        This page is visible because you have requested new permissions as part of your current outstanding app revision. An email will be sent to each of the customers who installed your app, requesting they agree to the new permissions you have requested.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        Each customer will have to agree to the new permission before our team can approve your revision. You can either track this process here or reach out to your customer to expedite their response to our message.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        You can also request that the email is re-sent to each customer individually.
      </p>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Helper should match a snapshot for the pipelines page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
          disabled=""
        >
          Deploy
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          Delete Pipeline
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        disabled=""
      >
        Deploy
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Delete Pipeline
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
